ocaml/grammar.js
    compilation_unit: $ => seq(
      optional($.shebang),
      optional($._structure)
    ),

    _structure: $ => choice(
      repeat1(';;'),
      seq(
        repeat(';;'),
        choice($._structure_item, $.toplevel_directive, $.expression_item),
        repeat(choice(
          seq(repeat(';;'), choice($._structure_item, $.toplevel_directive)),
          seq(repeat1(';;'), $.expression_item)
        )),
        repeat(';;')
      )
    ),
    _comment_content: $ =>
      repeat1(
        choice(
          token.immediate(prec(1, /'[\"\{\[]'/)),
          alias($._string, "anon"),
          alias($.quoted_string, "anon"),
          //grabs things that could be confused for quoted strings
          prec(2, /\{[^a-z\|]/),
          alias($.quoted_extension, "anon"),
          //to make this more efficent we grab big chunks till we hit any of the chars that might start one of the other possibilities
          token(/[^{('"*]+|[^*]/),
          //This is still needed because if all the other features aren't present we still need to be able to parse over a {('" 
          //,
          /\*[^)]/

        )
      ),
    //TODO use the string and string quote parsers to parse the unwanted tokens out 
    comment: $ => seq(
      '(*',
      optional($._comment_content),
      '*)'

    ),


    expression_item: $ => seq(
      $._sequence_expression,
      repeat($.item_attribute)
    ),

    _signature: $ => choice(
      repeat1(';;'),
      seq(repeat1(seq(repeat(';;'), $._signature_item)), repeat(';;'))
    ),

    // Toplevel

    value_definition: $ => seq(
      choice(seq('let', optional($._attribute), optional('rec')), $.let_operator),
      sep1(choice('and', $.let_and_operator), $.let_binding)
    ),

    let_binding: $ => prec.right(seq(
      field('pattern', $._binding_pattern),
      optional(seq(
        repeat($._parameter),
        optional($._polymorphic_typed),
        optional(seq(':>', $._type)),
        '=',
        field('body', $._sequence_expression),
      )),
      repeat($.item_attribute)
    )),

    _parameter: $ => choice(
      $.parameter,
      alias($._parenthesized_abstract_type, $.abstract_type)
    ),

    open_module: $ => seq(
      'open',
      optional('!'),
      optional($._attribute),
      $._module_expression,
      repeat($.item_attribute)
    ),

    _module_expression: $ => choice(
      $._simple_module_expression,
      $.module_path,
      $.structure,
      $.functor,
      $.module_application
    ),

    _polymorphic_typed: $ => seq(':', $._polymorphic_type),

    _type: $ => choice(
      $._tuple_type,
      $.function_type,
      $.aliased_type,
    ),

    _expression: $ => choice(
      $._simple_expression,
      $.product_expression,
      $.cons_expression,
      $.application_expression,
      $.infix_expression,
      $.sign_expression,
      $.set_expression,
      $.if_expression,
      $.while_expression,
      $.for_expression,
      $.match_expression,
      $.function_expression,
      $.fun_expression,
      $.try_expression,
      $.let_expression,
      $.assert_expression,
      $.lazy_expression,
      $.let_module_expression,
      $.let_open_expression,
      $.let_exception_expression
    ),

    _sequence_expression: $ => choice(
      $._expression,
      $.sequence_expression
    ),

    let_expression: $ => prec.right(PREC.match, seq(
      $.value_definition,
      'in',
      $._sequence_expression
    )),

    _pattern: $ => choice(
      $._simple_pattern,
      $.alias_pattern,
      $.or_pattern,
      $.constructor_pattern,
      $.tag_pattern,
      $.tuple_pattern,
      $.cons_pattern,
      $.range_pattern,
      $.lazy_pattern,
      $.exception_pattern
    ),

    _binding_pattern: $ => choice(
      $._value_name,
      $._signed_constant,
      alias($.typed_binding_pattern, $.typed_pattern),
      $.constructor_path,
      $.tag,
      $.polymorphic_variant_pattern,
      alias($.record_binding_pattern, $.record_pattern),
      alias($.list_binding_pattern, $.list_pattern),
      alias($.array_binding_pattern, $.array_pattern),
      alias($.local_open_binding_pattern, $.local_open_pattern),
      $.package_pattern,
      alias($.parenthesized_binding_pattern, $.parenthesized_pattern),
      alias($.alias_binding_pattern, $.alias_pattern),
      alias($.or_binding_pattern, $.or_pattern),
      alias($.constructor_binding_pattern, $.constructor_pattern),
      alias($.tag_binding_pattern, $.tag_pattern),
      alias($.tuple_binding_pattern, $.tuple_pattern),
      alias($.cons_binding_pattern, $.cons_pattern),
      $.range_pattern,
      alias($.lazy_binding_pattern, $.lazy_pattern),
      $._extension
    ),

    attribute_payload: $ => choice(
      $._structure,
      seq(':', optional(choice($._type, $._signature))),
      seq(
        '?',
        $._pattern,
        optional($.guard)
      )
    ),

    extension: $ => seq(
      '[%',
      $.attribute_id,
      optional($.attribute_payload),
      ']'
    ),

    _attribute: $ => seq('%', $.attribute_id),

    // Constants

    number: $ => NUMBER,

    string: $ => seq('"', optional($.string_content), token.immediate('"')),
    string_content: $ => repeat1(choice(
      token.immediate(/\s/),
      token.immediate(/\[@/),
      token.immediate(prec(1, /[^\\"%@]+/)),

      /%|@/, $._null,
      prec(2, $.escape_sequence),
      prec(2, alias(/\\u\{[0-9A-Fa-f]+\}/, $.escape_sequence)),
      prec(2, alias(/\\\n[\t ]*/, $.escape_sequence)),
      prec(2, $.conversion_specification),
      prec(2, $.pretty_printing_indication)
    )),

    quoted_string: $ => seq('{', $._quoted_string, '}'),
    _quoted_string: $ => seq(
      $._left_quoted_string_delim,
      optional($.quoted_string_content),
      $._right_quoted_string_delim,
    ),


    quoted_string_content: $ => repeat1(choice(
      token.immediate(/\s/),
      token.immediate(/\[@/),
      //TODO i think this is what is now stopping my string interpolation from ever running
      token.immediate(prec(1, /[^%@$|]+/)),
      prec(4, $.string_interpolation_escape),
      prec(2, $.string_interpolation),
      /%|@|\$|\|/,
      $._null,
      prec(2, $.conversion_specification),
      prec(2, $.pretty_printing_indication),
    )),

    _string_interpolation_start: $ => seq($._start_interpolation, optional($.module_name), "{"),
    string_interpolation: $ => seq(
      //the alias is used for hightlighting queries
      alias($._string_interpolation_start, "${"),
      alias($._expression, $.string_interpolation_content),
      alias("}", "}"),
    ),

    escape_sequence: $ => choice(
      /\\[\\"'ntbr ]/,
      /\\[0-9][0-9][0-9]/,
      /\\x[0-9A-Fa-f][0-9A-Fa-f]/,
      /\\o[0-3][0-7][0-7]/
    ),

    conversion_specification: $ => token(seq(
      '%',
      optional(/[\-0+ #]/),
      optional(/[1-9][0-9]*|\*/),
      optional(/\.([0-9]*|\*)/),
      choice(
        /[diunlLNxXosScCfFeEgGhHbBat!%@,]/,
        /[lnL][diuxXo]/
      )
    )),

    _infix_operator: $ => choice(
      $.pow_operator,
      $.mult_operator,
      $.add_operator,
      $.concat_operator,
      $.rel_operator,
      $.and_operator,
      $.or_operator,
      $.assign_operator
    ),

    mult_operator: $ => token(choice(
      'mod', 'land', 'lor', 'lxor',
      seq(/[*/%]/, repeat(OP_CHAR))
    )),

    _value_name: $ => choice(
      alias($._identifier, $.value_name),
      $.parenthesized_operator
    ),

    parenthesized_operator: $ => parenthesize(choice(
      $.prefix_operator,
      $._infix_operator,
      $.hash_operator,
      seq(
        '.',
        $.indexing_operator,
        choice(
          seq('(', optional(seq(';', '..')), ')'),
          seq('[', optional(seq(';', '..')), ']'),
          seq('{', optional(seq(';', '..')), '}')
        ),
        optional('<-')
      ),
      $.let_operator,
      $.let_and_operator,
      $.match_operator
    )),

    value_path: $ => path($.module_path, $._value_name),

    module_path: $ => prec(1, path($.module_path, $._module_name)),

    module_name: $ => $._capitalized_identifier,
    _module_name: $ => alias($._capitalized_identifier, $.module_name),
    _identifier: $ => /[a-z_][a-zA-Z0-9_']*/,
    _capitalized_identifier: $ => /[A-Z][a-zA-Z0-9_']*/,

    attribute_id: $ => sep1(/\./, choice($._identifier, $._capitalized_identifier))
  },
