ocaml/corpus/comments.txt
================================================================================
Comments
================================================================================

(**)
(* *)
(**
  doc
*)
( *)

let a= 10;;
--------------------------------------------------------------------------------

(compilation_unit
  (comment)
  (comment)
  (comment)
  (expression_item
    (value_path
      (parenthesized_operator
        (mult_operator))))
  (value_definition
    (let_binding
      (value_name)
      (number))))

================================================================================
Strings and comments
================================================================================

(* "*)" *)
"(**)";;
"(*";;
(* "*)" *)
"(**)";;
"(*";;

--------------------------------------------------------------------------------

(compilation_unit
  (comment)
  (expression_item
    (string
      (string_content)))
  (expression_item
    (string
      (string_content)))
  (comment)
  (expression_item
    (string
      (string_content)))
  (expression_item
    (string
      (string_content))))

================================================================================
Characters and comments
================================================================================


(* '"' *)
(* f' '"' *)
(*  *)
(* '\o170' '"' *)
(* '\'"' *)
(* '\" " *)
(* '" " *)
(* '*)
(*'*)
x
--------------------------------------------------------------------------------

(compilation_unit
  (comment)
  (comment)
  (comment
    (escape_sequence))
  (comment)
  (comment)
  (comment)
  (comment)
  (expression_item
    (value_path
      (value_name))))

================================================================================
Quoted strings and comments
================================================================================

(* {|*)|} *)
(* {%id |*)|} *)
(* {%M.id|*)|} *)
{|(**)|};;
{|(*|};;

--------------------------------------------------------------------------------

(compilation_unit
  (comment
    (quoted_string_content))
  (comment
    (attribute_id)
    (quoted_string_content))
  (comment
    (attribute_id)
    (quoted_string_content))
  (expression_item
    (quoted_string
      (quoted_string_content)))
  (expression_item
    (quoted_string
      (quoted_string_content))))
