ocaml/corpus/string-interpolation.txt
===========================
Simple Interpolation
===========================

{| %{hi} |};;

---

(compilation_unit
  (expression_item
    (quoted_string
      (quoted_string_content
        (string_interpolation
          (value_path
            (value_name)))))))

===========================
Nested interpolation
===========================

{b|<div> %{let a={this|hi|this}in a } |b};;


---
    (compilation_unit
      (expression_item
        (quoted_string
          (quoted_string_content
            (string_interpolation
              (let_expression
                (value_definition
                  (let_binding
                    (value_name)
                    (quoted_string
                      (quoted_string_content))))
                (value_path
                  (value_name))))))))

===========================
Interpolation 2x Nested 
===========================

{b|<div> %{let a={this| %{"string"} |this}in a } |b};;

{a|%{{b||b}}|a};;
---
    (compilation_unit
      (expression_item
        (quoted_string
          (quoted_string_content
            (string_interpolation
              (let_expression
                (value_definition
                  (let_binding
                    (value_name)
                    (quoted_string
                      (quoted_string_content
                        (string_interpolation
                          (string
                            (string_content)))))))
                (value_path
                  (value_name)))))))
      (expression_item
        (quoted_string
          (quoted_string_content
            (string_interpolation
              (quoted_string))))))
===========================
Interpolation with module
===========================

{|<div> %Int{ let a=1 in a }|};;


---

    (compilation_unit
      (expression_item
        (quoted_string
          (quoted_string_content
            (string_interpolation
              (let_expression
                (value_definition
                  (let_binding
                    (value_name)
                    (number)))
                (value_path
                  (value_name))))))))

===========================
Interpolation within attribute
===========================

let a=[%html {| %HTML{let a={a|%{"hi"}|a}in a } |}];;

---
    (compilation_unit
      (value_definition
        (let_binding
          (value_name)
          (extension
            (attribute_id)
            (attribute_payload
              (expression_item
                (quoted_string
                  (quoted_string_content
                    (string_interpolation
                      (let_expression
                        (value_definition
                          (let_binding
                            (value_name)
                            (quoted_string
                              (quoted_string_content
                                (string_interpolation
                                  (string
                                    (string_content)))))))
                        (value_path
                          (value_name))))))))))))
